[package]
name = "aliyun-oss"
version = "0.1.1"
edition = "2021"
authors = ["Echo <tgxz2000@gmail.com>"]
description = "aliyun oss sdk"
license = "MIT"
readme = "README.md"
repository = "https://github.com/EchoRust/aliyun-oss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.16"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }